--- a/ND1/style.css
+++ b/ND1/style.css
@@ -1,27 +1,19 @@
 
-.hello p {
+.one {
     color: white;
-    margin-top: 0px;
+    margin: 30px auto;
     background: green;
-    width: 180px;
-    height: 130px;
-    position: absolute;
-    top: 28%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 35px;
-    padding-top: 100px;
+    width: 300px;
+    height: 300px;
+    position: relative;
     text-align: center;
+    border: solid black 15px;
+    outline: 15px solid blue;
 
 }
-p.one {
-    border-style: solid;
-    border-color: blue;
-    border-width: 30px;
+.two {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
 }
-p.two {
-    border-style: solid;
-    border-width: 15px;
-    border-color: black;
-}
-
