--- a/ND4/style.css
+++ b/ND4/style.css
@@ -9,25 +9,31 @@ html, body {
 div {
     display: block;
 }
-h1 {
-
+body, h1, h2 {
+    font-family: "Krub", sans-serif;
+    font-weight: 400;
 }
 h3 {
-    font-family: "Verdana", sans-serif ;
+    font-family: "Krub", sans-serif ;
     font-size: 15px;
     line-height: 1.5;
-    font-weight: 100;
-
-
+    font-weight: 400;
 }
-
+.h1-font {
+    font-size: 70px;
+}
+.h2-font {
+    font-size: 30px;
+}
+strong, b {
+    font-weight: bold;
+}
 .m1-bar {
     background-color: white;
     opacity: 0.6;
     position: sticky;
     position: -webkit-sticky;
-    bottom: 0%;
-    left: 0%;
+    bottom: 0;
     width: 100%;
     height: 60px;
     text-align: center;
@@ -36,7 +42,6 @@ h3 {
 }
 .m1-right {
     margin-right: 100px;
-    padding: 0px 0px 15px 0px;
 }
 .bar1 {
     width: 25%;
@@ -53,7 +58,6 @@ h3 {
     text-align: center;
     min-height: 100%;
     height: 100%;
-    filter: grayscale(50%);
     background-repeat: no-repeat;
     color: white;
     position: relative;
@@ -61,12 +65,14 @@ h3 {
 }
 .block2 {
 
+    padding: 20px;
 }
 
 #fon {
     background: url("img/wedding_couple.jpg") center;
     background-size: cover;
     padding: 20px;
+    filter: grayscale(50%);
 }
 #fon2 {
     background-color: #F2E1E1;
